--- a/application/back/view/Goodstype/Add_goods_type.html
+++ b/application/back/view/Goodstype/Add_goods_type.html
@@ -19,27 +19,28 @@
 
 					<div class="page-content">
 						<div class="page-header">
-							<h1>
+                                                    <h1>
+                                                        
 								添加商品分类
 								
-							</h1>
+                                                    </h1>
 						</div><!-- /.page-header -->
 
 						<div class="row">
 							<div class="col-xs-12">
 								<!-- PAGE CONTENT BEGINS -->
 
-								<form class="form-horizontal" role="form">
+                                                                <form class="form-horizontal" role="form" method="post">
 									<div class="form-group">
 										<label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 分类名称 </label>
 
 										<div class="col-sm-9">
-											<input type="text" id="form-field-1" placeholder="例如：化妆品" class="col-xs-10 col-sm-5" />
+                                                                                    <input type="text" id="form-field-1" placeholder="例如：化妆品" class="col-xs-10 col-sm-5" /><span id="mas"></span>
 										</div>
 									</div>
                                          <div class="clearfix form-actions">
 										<div class="col-md-offset-3 col-md-9">
-											<button class="btn btn-info" type="button">
+                                                                                    <button class="btn btn-info" type="button" onclick="addshopphing()">
 												<i class="icon-ok bigger-110"></i>
 												添加
 											</button>
@@ -60,7 +61,6 @@
 			
 
 		<!-- inline scripts related to this page -->
-
 		<script type="text/javascript">
 			jQuery(function($) {
 				$('#id-disable-check').on('click', function() {
@@ -338,6 +338,18 @@
 				*/
 			
 			});
+                        function  addshopphing(){
+                            shopname=$('#form-field-1').val();
+                            
+                            $.post('/back/goodstype/toadd_goods_type',{shopname:shopname},
+                            function(data){
+                                if(data==0){
+                                    alert("商品名称已存在");
+                                }else{
+                                    alert("添加成功");
+                                }
+                            });
+                        }
 		</script>
 	
 </body>
