--- a/application/back/view/Index/index.html
+++ b/application/back/view/Index/index.html
@@ -74,20 +74,20 @@
 											</div>
 
 											<div class="infobox-data">
-												<span class="infobox-data-number">8</span>
-												<div class="infobox-content">新订单</div>
+												<span class="infobox-data-number">{$arr['countorder']}笔</span>
+												<div class="infobox-content">商城订单</div>
 											</div>
-											<div class="stat stat-important">4%</div>
+											
 										</div>
 
 										<div class="infobox infobox-red  ">
 											<div class="infobox-icon">
 												<i class="icon-beaker"></i>
 											</div>
-
+										
 											<div class="infobox-data">
-												<span class="infobox-data-number">7</span>
-												<div class="infobox-content">调查</div>
+												<span class="infobox-data-number">待开发</span>
+												<div class="infobox-content">待开发</div>
 											</div>
 										</div>
 
@@ -97,29 +97,29 @@
 											</div>
 
 											<div class="infobox-data">
-												<span class="infobox-data-number">6,251</span>
-												<div class="infobox-content">页面查看次数</div>
+												<span class="infobox-data-number">待开发</span>
+												<div class="infobox-content">待开发</div>
 											</div>
 
-											<div class="badge badge-success">
+											<!-- <div class="badge badge-success">
 												7.2%
 												<i class="icon-arrow-up"></i>
-											</div>
+											</div> -->
 										</div>
 
 										<div class="infobox infobox-blue2  ">
 											<div class="infobox-progress">
 												<div class="easy-pie-chart percentage" data-percent="42" data-size="46">
-													<span class="percent">42</span>%
+													<!-- <span class="percent">42</span>% -->
 												</div>
 											</div>
 
 											<div class="infobox-data">
-												<span class="infobox-text">交易使用</span>
+												<span class="infobox-text">待开发</span>
 
 												<div class="infobox-content">
-													<span class="bigger-110">~</span>
-													剩余58GB
+													<!-- <span class="bigger-110">~</span> -->
+													未开发
 												</div>
 											</div>
 										</div>
